# vectorial

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  ops.rs
src/rect/: ext_ops.rs  mod.rs
src/vec/: cgmath.rs  ext_ops.rs  mod.rs  num_traits.rs
src/vector/: mod.rs  ops.rs
