[package]
name = "vectorial"
version = "1.0.0-main"
edition = "2021"

authors = [
    "Martin Mills <daggerbot@gmail.com>",
]
categories = ["mathematics", "no-std"]
description = "Vectors and related types"
homepage = "https://github.com/daggerbot/vectorial"
keywords = ["math", "no-std", "vector"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/daggerbot/vectorial"

[dependencies]
cgmath = { version = "0.18.0", default-features = false, optional = true }
ext-ops = { version = "0.1.0", default-features = false, optional = true }
num-complex = { version = "0.4.3", default-features = false, optional = true }
num-traits = { version = "0.2.15", default-features = false, optional = true }
serde = { version = "1.0.160", features = ["derive"], default-features = false, optional = true }

[features]
default = ["std"]
std = []
